--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -63,7 +63,18 @@
         	<groupId>com.microsoft.sqlserver</groupId>
         	<artifactId>mssql-jdbc</artifactId>
         	<scope>runtime</scope>
-    	</dependency>
+    	</dependency>	
+
+		<dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <scope>test</scope>
+    </dependency>
+		<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter-engine</artifactId>
+		<scope>test</scope>
+	</dependency>
 	</dependencies>
 
 	<build>
