--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # Microsoft SQL Server configuration
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SampleDB;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://mssql:1433;databaseName=SampleDB;encrypt=true;trustServerCertificate=true;
 
 spring.datasource.username=sa
 spring.datasource.password=MyStrong!Pass123
