--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,30 @@ services:
     volumes:
       - mssql-data:/var/opt/mssql
       - ./backups:/backups
+      - ./docker-entrypoint.sh:/docker-entrypoint.sh
+    command: /bin/bash /docker-entrypoint.sh
     restart: unless-stopped
+    healthcheck:
+      test: /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P "MyStrong!Pass123" -C -Q "SELECT 1" || exit 1
+      start_period: 30s
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
+  app:
+    build:
+      context: ./demo
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:sqlserver://mssql:1433;databaseName=SampleDB;encrypt=true;trustServerCertificate=true
+      - SPRING_DATASOURCE_USERNAME=sa
+      - SPRING_DATASOURCE_PASSWORD=MyStrong!Pass123
+    depends_on:
+      mssql:
+        condition: service_healthy
+    restart: on-failure
 
 volumes:
   mssql-data:
